--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-# Google App Engine generated folder
-appengine-generated/
+# NE pas uploader les fichiers de conception! 
+############################################## 
+*.sketch
+*.fig
+*.xd
+design/ 
+
+# Autres fichiers à ignorer
+.DS_Store
